@@ -5,13 +5,15 @@ import java.util.List;
 public class Cart implements Serializable {
 
     private static final List<Cart> extent=new ArrayList<>();
-    public static List<Cart> getExtent(){
-        return extent;
-    }
 
     private static final String EXTENT_FILE = "cart_extent.ser";
 
     private List<Product> unavailableProducts=new ArrayList<>();
+
+
+    public static List<Cart> getExtent(){
+        return extent;
+    }
 
     public Cart() {
         extent.add(this);
@@ -39,8 +41,6 @@ public class Cart implements Serializable {
         return unavailableProducts.size();
     }
 
-
-
     public void addProduct(Product p){
         if (p==null){
             throw new IllegalArgumentException("Product cannot be null");
@@ -57,7 +57,7 @@ public class Cart implements Serializable {
             throw new IllegalArgumentException("Quantity cannot be negative");
         }
         while(unavailableProducts.size()>newQuantity){
-            unavailableProducts.removeLast();
+            unavailableProducts.remove(unavailableProducts.size()-1);
         }
     }
 
